<resources>
    <string name="app_name">Artesanías Ecuatorianas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_logintitle">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="CURRENT_USER_KEY_STORE">CURRENT_USER</string>
    <string name="descr">TODO</string>
    <string name="sign_in_to_continue">Inicie session para continuar</string>
    <string name="sign_in">INICIAR SESSION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user">REGISTRARSE</string>
    <string name="new_bussines">REGISTRAR EMPRESA</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="prompt_emailuserbussiness">Email del propietario</string>
    <string name="prompt_namebussines">Nombre de la empresa</string>
    <string name="prompt_city">Ciudad</string>
    <string name="prompt_ruc">RUC de la empresa</string>
    <string name="prompt_addressbussines">Dirección de la empresa</string>
    <string name="datos_bussines">Ingrese los datos de la empresa</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ingrese_sus_datos_de_registro">Ingrese sus datos de registro</string>
    <string name="registrar">Registrar</string>
    <string name="solicitar_registro_empresa">Solicitar</string>
    <string name="solicitar_email_empresa">Email del solicitante</string>
    <string name="solicitar_pass_empresa">Clave del solicitante</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>

    <!--
 Mi información
  -->
    <string name="titleinfo">MI INFORMACIÓN</string>
    <string name="desctitleinfo">Modifique sus datos</string>
    <string name="infoaddress">Dirección</string>
    <string name="infoemail">Correo electrónico</string>
    <string name="infolastname">Apellidos</string>
    <string name="infoname">Nombres</string>
    <string name="infopass">Clave Actual</string>
    <string name="infophone">Teléfono</string>
    <string name="infosuscription">Suscripción</string>
    <string name="infousername">Usuario</string>
    <string name="infocambiarclave">Cambiar Clave</string>
    <string name="infopassnew">Clave Nueva</string>
    <string name="infopassrep">Repetir Clave</string>

    <!--
  Registrar artesanias
   -->
    <string name="registrarart">Registrar Artesanía</string>
    <string name="Ingresedatos">Ingrese datos de la artesanía</string>
    <string name="nombreart">Nombre</string>
    <string name="categoriaart">Categoría</string>
    <string name="cantart">Cantidad Actual</string>
    <string name="precioart">Precio</string>
    <string name="descriptioncrafs">Descripción de la artesanía</string>
    <string name="seleccimg">Selecciona Imagen</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="list_crafts">Mis artesanías</string>
    <string name="registry_crafts">Registrar artesanías</string>

    <string name="app_rc_correo">Correo de restauración</string>
    <string name="app_rc_btn_recuperar">Restaurar</string>
    <string name="app_rc_btn_rest">¿Olvidó su clave?</string>
    <string name="modificar">Modificar</string>
    <string name="update_data_crafts">Modifique datos de la artesanía</string>

    <!--
  Detalle artesania
   -->
    <string name="titleart">Artesanía</string>
    <string name="categart">Categoría:</string>
    <string name="nameart">Nombre:</string>
    <string name="cantactart">Cantidad Actual:</string>
    <string name="priceart">Precio:</string>
    <string name="descart">Descripción:</string>
    <string name="comprar">Realizar pedido</string>

    <!--
    Premium
    -->
    <string name="premium_number_card">Número de tarjeta</string>
    <string name="premium_date_expiration">Fecha de expiración</string>
    <string name="premium_cvc">CVC</string>
    <string name="premium_btn">Cambiar a premium</string>
    <string name="googlepay_status_unavailable">Google play es invalido</string>
    <string name="texto_info_pago">* Beneficios de pasarse a premium:\n- Puedes registrar un número ilimitado de artesanías, con una cuenta Free solo puedes registrar hasta 5 items.\n- Puedes registrar las empresas o tiendas de artesanías que creas conveniente para promocionar tus productos. Con un cuenta Free solo puedes tener una.\n* Costos de pasarse a premium:\n- Pagos mensuales de $6.99\n- Pagos trimestral de $17.99\n- Pagos semestrales de $38.99\n- Pagos anuales de $53.99</string>
    <string name="pasar_a_premiun">Pásate a Premium</string>
    <string name="todo">TODO</string>
    <string name="payments_show_name">Pago recibido correctamente por %s!</string>

    <!--
    Order
    -->
    <string name="order_cantidad_escoger">Cantidad solicitada</string>

</resources>