<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D5D5"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/fondo">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:paddingTop="50dp"
                    android:paddingBottom="80dp"
                    app:srcCompat="@drawable/iconarte2"
                    android:contentDescription="@string/descr" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/fondo2">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/welcome"
                    android:textColor="#525966"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteY="88dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sign_in_to_continue"
                    android:textColor="#525966"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mainusername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_email"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border3"
                        android:drawableStart="@drawable/icon_email"
                        android:drawablePadding="10dp"
                        android:drawableTint="#0669b2"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mainpassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mainusername"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainusername"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border3"
                        android:drawableStart="@drawable/icon_password"
                        android:drawablePadding="10dp"
                        android:drawableTint="#0669b2"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/mainpassword"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="#0669b2"
                    android:enabled="false"
                    android:fontFamily="@font/alfa_slab_one"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/restaurarclave"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/login"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp"
                    android:backgroundTint="#0669b2"
                    android:fontFamily="@font/alfa_slab_one"
                    android:onClick="newUserOnClick"
                    android:text="@string/app_rc_btn_rest"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/register_user"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/restaurarclave"
                    android:layout_centerInParent="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#0669b2"
                    android:fontFamily="@font/alfa_slab_one"
                    android:onClick="newUserOnClick"
                    android:text="@string/new_user"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical|center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>